--- a/ColorizedApp/Base.lproj/Main.storyboard
+++ b/ColorizedApp/Base.lproj/Main.storyboard
@@ -1,24 +1,158 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="13122.16" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="21507" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+    <device id="retina6_72" orientation="portrait" appearance="light"/>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13104.12"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="21505"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
+        <capability name="System colors in document resources" minToolsVersion="11.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
         <!--View Controller-->
         <scene sceneID="tne-QT-ifu">
             <objects>
-                <viewController id="BYZ-38-t0r" customClass="ViewController" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController id="BYZ-38-t0r" customClass="ViewController" customModule="ColorizedApp" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
-                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <rect key="frame" x="0.0" y="0.0" width="430" height="932"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <color key="backgroundColor" xcode11CocoaTouchSystemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                        <subviews>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="cqS-JW-czL">
+                                <rect key="frame" x="40" y="79" width="350" height="128"/>
+                                <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="128" id="OS0-q0-ewH"/>
+                                </constraints>
+                            </view>
+                            <stackView opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="249" spacing="10" translatesAutoresizingMaskIntoConstraints="NO" id="mpK-c9-DBf">
+                                <rect key="frame" x="16" y="307" width="92" height="135"/>
+                                <subviews>
+                                    <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" distribution="fillEqually" alignment="top" spacing="40" translatesAutoresizingMaskIntoConstraints="NO" id="OXY-BX-G4s">
+                                        <rect key="frame" x="0.0" y="0.0" width="50.666666666666664" height="135"/>
+                                        <subviews>
+                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Red:" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="VsP-N9-Izf">
+                                                <rect key="frame" x="0.0" y="0.0" width="34.666666666666664" height="18.333333333333332"/>
+                                                <fontDescription key="fontDescription" name="Baskerville-BoldItalic" family="Baskerville" pointSize="16"/>
+                                                <color key="textColor" red="0.0" green="0.0" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                                <nil key="highlightedColor"/>
+                                            </label>
+                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Green:" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ebi-o9-mSY">
+                                                <rect key="frame" x="0.0" y="58.333333333333321" width="50.333333333333336" height="18.333333333333336"/>
+                                                <fontDescription key="fontDescription" name="Baskerville-BoldItalic" family="Baskerville" pointSize="16"/>
+                                                <color key="textColor" red="0.0" green="0.0" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                                <nil key="highlightedColor"/>
+                                            </label>
+                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Blue:" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="b0E-WP-CSn">
+                                                <rect key="frame" x="0.0" y="116.66666666666669" width="38.666666666666664" height="18.333333333333343"/>
+                                                <fontDescription key="fontDescription" name="Baskerville-BoldItalic" family="Baskerville" pointSize="16"/>
+                                                <color key="textColor" red="0.0" green="0.0" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                                <nil key="highlightedColor"/>
+                                            </label>
+                                        </subviews>
+                                    </stackView>
+                                    <stackView opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="244" horizontalCompressionResistancePriority="749" axis="vertical" distribution="fillEqually" alignment="center" spacing="42" translatesAutoresizingMaskIntoConstraints="NO" id="XbK-Hd-yCo">
+                                        <rect key="frame" x="60.666666666666679" y="0.0" width="31.333333333333336" height="135"/>
+                                        <subviews>
+                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="0" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Zoa-wV-yrz">
+                                                <rect key="frame" x="0.0" y="0.0" width="31.333333333333332" height="17"/>
+                                                <constraints>
+                                                    <constraint firstAttribute="height" constant="17" id="rsm-dS-pJi"/>
+                                                </constraints>
+                                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                                <nil key="textColor"/>
+                                                <nil key="highlightedColor"/>
+                                            </label>
+                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="0" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="zZ6-h4-Z0T">
+                                                <rect key="frame" x="0.0" y="59" width="31.333333333333332" height="17"/>
+                                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                                <nil key="textColor"/>
+                                                <nil key="highlightedColor"/>
+                                            </label>
+                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="0" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="3kw-ln-kNh">
+                                                <rect key="frame" x="0.0" y="118" width="31.333333333333332" height="17"/>
+                                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                                <nil key="textColor"/>
+                                                <nil key="highlightedColor"/>
+                                            </label>
+                                        </subviews>
+                                        <constraints>
+                                            <constraint firstItem="Zoa-wV-yrz" firstAttribute="leading" secondItem="zZ6-h4-Z0T" secondAttribute="leading" id="XfV-lS-1Bl"/>
+                                            <constraint firstItem="zZ6-h4-Z0T" firstAttribute="leading" secondItem="3kw-ln-kNh" secondAttribute="leading" id="ghO-Mi-37i"/>
+                                            <constraint firstItem="Zoa-wV-yrz" firstAttribute="trailing" secondItem="XbK-Hd-yCo" secondAttribute="trailingMargin" id="kgF-z8-eGx"/>
+                                        </constraints>
+                                    </stackView>
+                                </subviews>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="92" id="Nw0-wL-orU"/>
+                                    <constraint firstItem="XbK-Hd-yCo" firstAttribute="leading" secondItem="mpK-c9-DBf" secondAttribute="leading" constant="60.5" id="pMX-vg-y10"/>
+                                </constraints>
+                            </stackView>
+                            <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="24" translatesAutoresizingMaskIntoConstraints="NO" id="fHW-JV-WBw">
+                                <rect key="frame" x="118" y="307" width="289" height="138"/>
+                                <subviews>
+                                    <slider opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" value="1" minValue="0.0" maxValue="1" translatesAutoresizingMaskIntoConstraints="NO" id="ot6-6W-ld5">
+                                        <rect key="frame" x="-2" y="0.0" width="293" height="31"/>
+                                        <color key="minimumTrackTintColor" systemColor="systemRedColor"/>
+                                        <connections>
+                                            <action selector="changeRedColor" destination="BYZ-38-t0r" eventType="valueChanged" id="Lhz-ox-cxC"/>
+                                        </connections>
+                                    </slider>
+                                    <slider opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" value="1" minValue="0.0" maxValue="1" translatesAutoresizingMaskIntoConstraints="NO" id="zE2-z7-afY">
+                                        <rect key="frame" x="-2" y="54" width="293" height="31"/>
+                                        <color key="minimumTrackTintColor" systemColor="systemGreenColor"/>
+                                        <connections>
+                                            <action selector="changeGreenColor" destination="BYZ-38-t0r" eventType="valueChanged" id="eOx-1k-qIM"/>
+                                        </connections>
+                                    </slider>
+                                    <slider opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" value="1" minValue="0.0" maxValue="1" translatesAutoresizingMaskIntoConstraints="NO" id="sxZ-Eq-IvG">
+                                        <rect key="frame" x="-2" y="108" width="293" height="31"/>
+                                        <color key="minimumTrackTintColor" red="0.0" green="0.0" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                        <connections>
+                                            <action selector="changeBlueColor" destination="BYZ-38-t0r" eventType="valueChanged" id="WFZ-Qx-Bfd"/>
+                                        </connections>
+                                    </slider>
+                                </subviews>
+                            </stackView>
+                        </subviews>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
+                        <color key="backgroundColor" red="0.63529411764705879" green="0.92941176470588238" blue="0.78431372549019607" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        <constraints>
+                            <constraint firstItem="cqS-JW-czL" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="40" id="Fs4-YB-sMO"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="fHW-JV-WBw" secondAttribute="trailing" constant="23" id="SwT-kJ-f1E"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="cqS-JW-czL" secondAttribute="trailing" constant="40" id="UFd-0h-agE"/>
+                            <constraint firstItem="fHW-JV-WBw" firstAttribute="leading" secondItem="mpK-c9-DBf" secondAttribute="trailing" constant="10" id="Znc-6a-n1T"/>
+                            <constraint firstItem="mpK-c9-DBf" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="16" id="b70-Ic-KZy"/>
+                            <constraint firstItem="mpK-c9-DBf" firstAttribute="top" secondItem="cqS-JW-czL" secondAttribute="bottom" constant="100" id="kcY-tx-E0Q"/>
+                            <constraint firstItem="cqS-JW-czL" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" constant="20" id="omz-sV-NYH"/>
+                            <constraint firstItem="fHW-JV-WBw" firstAttribute="top" secondItem="cqS-JW-czL" secondAttribute="bottom" constant="100" id="x8g-kx-AHH"/>
+                        </constraints>
                     </view>
+                    <connections>
+                        <outlet property="blueColorLabel" destination="b0E-WP-CSn" id="XLa-CU-VTq"/>
+                        <outlet property="blueSlider" destination="sxZ-Eq-IvG" id="HKI-aN-Xz0"/>
+                        <outlet property="greenColorLabel" destination="ebi-o9-mSY" id="4Yb-5T-8U5"/>
+                        <outlet property="greenSlider" destination="zE2-z7-afY" id="ham-XO-PYi"/>
+                        <outlet property="redColorLabel" destination="VsP-N9-Izf" id="5hE-W0-QuZ"/>
+                        <outlet property="redSlider" destination="ot6-6W-ld5" id="XUK-Jf-cq5"/>
+                        <outlet property="selectedColorView" destination="cqS-JW-czL" id="Iir-rj-wtN"/>
+                        <outlet property="valueOfBlueLabel" destination="3kw-ln-kNh" id="23T-qJ-KLG"/>
+                        <outlet property="valueOfGreenLabel" destination="zZ6-h4-Z0T" id="y2N-eh-Xvj"/>
+                        <outlet property="valueOfRedLabel" destination="Zoa-wV-yrz" id="5yt-jb-vbO"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
+            <point key="canvasLocation" x="138.75" y="-3.1690140845070425"/>
         </scene>
     </scenes>
+    <resources>
+        <systemColor name="systemBackgroundColor">
+            <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+        </systemColor>
+        <systemColor name="systemGreenColor">
+            <color red="0.20392156862745098" green="0.7803921568627451" blue="0.34901960784313724" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+        </systemColor>
+        <systemColor name="systemRedColor">
+            <color red="1" green="0.23137254901960785" blue="0.18823529411764706" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+        </systemColor>
+    </resources>
 </document>
